tests/invalid/in_unsupported_type/main.py
def run_case() -> None:
    x: int = 10

    y: bool = 5 in x

if __name__ == "__main__":
    run_case()
